# PVZ-H

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_SETUP.md  build.sh
backend/: .clang-format  CMakeLists.txt  main.cpp
backend/include/ai/: AStar.h  PathFinder.h
backend/include/core/: Config.h  Game.h  GameState.h
backend/include/entities/: Dave.h  Entity.h  EntityManager.h  Explosion.h  Item.h  Plant.h  Projectile.h  Zombie.h
backend/include/items/: Bucket.h  HealthPotion.h
backend/include/maze/: Cell.h  Maze.h  MazeGenerator.h
backend/include/network/: GameStateSerializer.h  Protocol.h  Server.h
backend/include/physics/: Collision.h  Vector2D.h
backend/include/plants/: CherryBomb.h  DoublePeaShooter.h  PeaShooter.h  WallNut.h
backend/include/utils/: Animation.h  Random.h  Timer.h
backend/src/ai/: AStar.cpp
backend/src/core/: Game.cpp  GameState.cpp
backend/src/entities/: Dave.cpp  Entity.cpp  EntityManager.cpp  Explosion.cpp  Item.cpp  Plant.cpp  Projectile.cpp  Zombie.cpp
backend/src/maze/: Maze.cpp
backend/src/network/: GameStateSerializer.cpp
backend/src/physics/: Collision.cpp  Vector2D.cpp
backend/src/plants/: CherryBomb.cpp  DoublePeaShooter.cpp  PeaShooter.cpp  WallNut.cpp
backend/src/utils/: Animation.cpp
backend/tests/: .gitkeep
docs/: 60FPS_INTERPOLATION.md  API.md  ARCHITECTURE.md  BRANCHING.md  GAMEPLAY.md  RELEASE.md
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
scripts/: create_dave_spritesheet.py
server/: bridge.js  package-lock.json  package.json
(+29 files in other folders)
